--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,7 @@
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webApp>
 						<contextPath>/</contextPath>
+						<defaultsDescriptor>src/main/resources/webdefault.xml</defaultsDescriptor>
 					</webApp>
 					<!-- 适应测试阶段的jetty，日志写入目录，tomcat写入tomcat/logs下 -->
 					<systemProperties>
